# corfumv

./: .gitignore  README.md  docker-compose-test.yml  docker-compose.yml  makefile  pyproject.toml
corfumv/: __init__.py  config.py  server.py
corfumv/client/: __init__.py  async_client.py  client.py  sync_clients.py
corfumv/core/: __init__.py  client.py  entity.py  repository.py  service.py  unit_of_work.py  uri.py
corfumv/entity/: __init__.py  experiment.py  tf_model.py
corfumv/mongo/: __init__.py  deps.py  misc.py  repository.py  service.py  unit_of_work.py
corfumv/routers/: __init__.py  experiment_router.py  model_router.py
corfumv/schemas/: __init__.py  entities.py  enums.py  misc.py  models.py  responses.py
corfumv/utils/: __init__.py  client_utils.py
docker/: corfumv-main.Dockerfile  corfumv.Dockerfile  lab.Dockerfile
tests/: conftest.py  test_async_client.py  test_client_exp.py  test_client_models.py  test_pymongo_experiments.py  test_pymongo_models.py  test_sync_client.py
