[tool.poetry]
name = "corfumv"
version = "0.1.2.dev7"
description = "framework for model versioning"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.5.2"
pymongo = "^4.6.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.test.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"


[tool.poetry.group.client.dependencies]
aiohttp = "^3.9.1"
jupyterlab = "^4.0.9"

[tool.pytest.ini_options]
addopts = "--ignore=pgdata -p no:warnings"
pythonpath = [
  ".", "CorfuMV",
]
asyncio_mode="auto"


[tool.ruff]
select = ["ALL"]
line-length = 88
indent-width = 4
ignore = ["FA100"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
