[tool.poetry]
name = "corfumv"
version = "0.1.3.rc1"
description = "framework for model versioning"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"
packages = [{include = "corfumv"}]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.2"
bson = "^0.5.10"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.5.2"
pymongo = "^4.6.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
numpy = "^1.26.2"


[tool.poetry.group.test.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"


[tool.poetry.group.client.dependencies]
aiohttp = "^3.9.1"
jupyterlab = "^4.0.9"
platformdirs = "<4.0.0"
numpy = "^1.26.2"


[tool.pytest.ini_options]
addopts = "--ignore=pgdata -p no:warnings"
pythonpath = [
  ".", "CorfuMV",
]
asyncio_mode="auto"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F"]
# ignore = [
#   "F401", "FA100", "COM812", "FA102",
#   "ANN101", "PLR", "D100", "A003",
#   "FBT001", "FBT002", "RET505"
# ]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
