[tool.poetry]
name = "corfumv"
version = "0.2.2.post0"
description = "Fast framework for model versioning"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "corfumv"}]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.5.2"
numpy = "^1.26.2"
httpx = "^0.26.0"
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.test.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"


[tool.poetry.group.client.dependencies]
jupyterlab = "^4.0.9"
platformdirs = "<4.0.0"



[tool.poetry.group.build.dependencies]
ansible = "^9.1.0"

[tool.pytest.ini_options]
addopts = "--ignore=pgdata -p no:warnings"
pythonpath = [
  ".", "CorfuMV",
]
asyncio_mode="auto"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
ignore = [
  "C901", "B006", "B904"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
